syntax = "proto3";

package com.template.appointment;

option java_multiple_files = true;
option java_package = "com.template.appointment.grpc";
option java_outer_classname = "AppointmentProto";

import "google/protobuf/timestamp.proto";

service AppointmentService {
    rpc GetAppointment(GetAppointmentRequest) returns (AppointmentResponse);
    rpc CreateAppointment(CreateAppointmentRequest) returns (AppointmentResponse);
}

message GetAppointmentRequest {
    string appointment_id = 1;
}

message CreateAppointmentRequest {
    string client_id = 1;
    string product_id = 2;
    google.protobuf.Timestamp start_time = 3;
    google.protobuf.Timestamp end_time = 4;
}

message AppointmentResponse {
    string appointment_id = 1;
    string client_id = 2;
    string product_id = 3;
    google.protobuf.Timestamp start_time = 4;
    google.protobuf.Timestamp end_time = 5;
    string status = 6;
}
